# rust

./: README.md  _.development.notes.sh  _.ecs.build.script.sh  development.notes.sh  notes.txt
infra/: aws.yml  customDomain.js  customDomain.yml  deployment.variables.sh
infra/config/: default.js  (+4 more)
performance/: README.md  docker-compose.yml  grafana-dashboard-http-metrics-1696247315730.json  grafana-dashboard-vusers-metrics-1696247315730.json  grafana-language-comparison-1696265053658.json  grafana-language-comparisons-1696267764178.json  notes.txt  package.json  prometheus.yml
serverless-lambda-docker-rust/: .gitignore  package-lock.json  package.json  serverless.yml
serverless-lambda-rust/: Cargo.toml  package-lock.json  package.json  serverless.yml
sh/: _.build.sh  _.clean.sh  _.deploy.sh  _.dev.sh  _.logs.sh  _.logs.tail.sh  _.package.sh  _.print.sh  _.remove.sh  check.serverless.sh  confirm.run.sh  variables.sh
sls-fargate/: .dockerignore  Cargo.toml  package-lock.json  package.json  serverless.yml
sls-fargate-rust/: Cargo.toml  Dockerfile  Dockerfile.broken  _.deploy.sh  _.remove.sh  build.push.and.deploy.sh  package-lock.json  package.json  serverless.yaml  serverless.yml
sls-fargate-rust/src/: bak.main.rs  main.rs
sls-lambda-docker-rust/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.backup  Dockerfile.gnu-broken  _.build.sh  package-lock.json  package.json  serverless.yml
sls-lambda-docker-rust/src/: main.rs
sls-lambda-rust/: Cargo.toml  _.deploy.sh  _.remove.sh  _.setup.and.deploy.sh  package-lock.json  package.json  serverless.yml
(+32 files in other folders)
