[package]
name = "sls-fargate-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
async-graphql = { version = "6.0.0", features = ["chrono"] }
async-graphql-actix-web = "6.0.0"
actix-rt = "2.8.0"
log = "0.4.20"
simple_logger = "4.2.0"
serde = { version = "1.0.178", features = ["derive"] }
