[package]
name = "sls-lambda-docker-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
lambda_http = "0.8.1"
lambda_runtime = "0.8.2"
log = "0.4.20"
serde_json = "1.0.105"
tokio = "1.32.0"
